# vk_project

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: cmake-multi-platform.yml  wheels.yml
colab/: test_vk.ipynb
cpp/: bindings.cpp  device.cpp  device.hpp  loaders.cpp  vk_cuda_interop.cpp
src/vk/: __init__.py  __init__.pyi  _context.py  _datasets.py  _declarations.py  _driver_setup.py  _interop.py  _named_access.py  _vk.cp312-win_amd64.pyd  _vk.pyi  math3d.py  vk.pyi
tutorials/: tutorial01_devices.ipynb  tutorial01_devices.py  tutorial02_vectors_and_matrices.ipynb  tutorial02_vectors_and_matrices.py  tutorial03_basic_compute.ipynb  tutorial03_basic_compute.py
