[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "vulky"
version = "0.0.7"
description = "Minimal Vulkan Python wrapper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [{name = "Ludwic Leonard Mendez", email = "lleonart1984@gmail.com"}]
license = {text = "MIT"}  # or your license

[tool.scikit-build]
wheel.packages = ["src/vk"]
